# goit-pyweb-hw-08

./: pyproject.toml
task_1/: hw.py  models.py  seed.py
task_2/: consumer_email.py  consumer_sms.py  contact_model.py  producer.py
