[tool.poetry]
name = "goit-pyweb-hw-08"
version = "0.1.0"
description = ""
authors = ["SvetlanaRomaniuk111 <gatskosv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
pika = "^1.3.2"
redis = "^5.2.1"
faker = "^33.3.0"
mongoengine = "^0.29.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
